# ics

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  DESIGN_DOCUMENT.md  LICENSE  README.md  design_document.md  design_document.txt  rustfmt.toml
docs/: Design.md  Proposal_Writer.md
examples/: event.rs  ical.rs  todo.rs
src/: components.rs  contentline.rs  ical.rs  lib.rs  macros.rs  parameters.rs  properties.rs  util.rs  value.rs  writer.rs
src/components/: contentline.rs  mod.rs
src/core/: components.rs  contentline.rs  mod.rs  parameters.rs  properties.rs
src/core/tests/: mod.rs
src/ics/: mod.rs  parameter_builder.rs  property_builder.rs
src/value/: encoding.rs  mod.rs  string.rs
src/value_data_type/: definitions.rs  mod.rs
src/values/: encoding.rs  error.rs  mod.rs  string.rs  time.rs
src/values/tests/: mod.rs
tests/: components.rs  ical.rs  ical_writer.rs
