[package]
name = "ics"
version = "0.4.2"
authors = ["hummingly <31522351+hummingly@users.noreply.github.com>"]
description = "A library for creating iCalendar files as specified in RFC5545 and RFC7986."
license = "MIT OR Apache-2.0"
repository = "https://github.com/hummingly/ics"
readme = "README.md"
keywords = ["iCalendar", "ical", "ics", "calendar"]
include = ["src/**", "Cargo.toml", "LICENSE"]

[features]
default =  ["rfc7986"]
rfc7986 = []